mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/using/erc7201_builtin_using_for.sol
using {erc7201} for string;
// ----
// TypeError 8187: (7-14): Expected function name.
